[project]
name = "nonebot_plugin_ddcheck"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bilibili-api",
    "bilireq>=0.2.13",
    "drissionpage>=4.1.0.18",
    "httpx>=0.27.2",
    "jinja2>=3.1.6",
    "moviepy>=2.2.1",
    "nonebot-plugin-alconna>=0.58.5",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-htmlrender>=0.6.6",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebot2>=2.4.2",
    "poolctrl",
    "retry>=0.9.2",
    "returns>=0.25.0",
    "tenacity>=9.1.2",
    "yt-dlp>=2025.6.30",
]

[tool.uv.sources]
poolctrl = { git = "https://github.com/GrahLnn/poolctrl.git" }
bilibili-api = { git = "https://github.com/GrahLnn/bilibili-api.git" }
